[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = "0.18.0"
futures = "0.3.28"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
url = "2.2.2"
futures-channel = "0.3.28"